# satellite-data-toolkit

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  macos-build.yml  package.yml  release.yml  rust-audit.yml  rust-pro-windows-exe.yml  windows-build.yml  windows-release.yml
crates/satellite-cli/: Cargo.toml
crates/satellite-cli/src/: main.rs
crates/satellite-core/: Cargo.toml
crates/satellite-core/src/: lib.rs  nasa_power.rs  ndvi.rs  pv.rs  pvwatts.rs
docs/: PACKAGING.md  PRODUCTION_READINESS_AUDIT.md  VALIDATION_REPORT.md  security-dependency-notes.md
satellite_data_toolkit_rust/: BUILD_PORTABLE_EXE.cmd  Cargo.toml  README_RU.md  RUN_WINDOWS_BUILD_AND_START.cmd
satellite_data_toolkit_rust/docs/: API_DESIGN.md
satellite_data_toolkit_rust/src/: main.rs
scripts/: audit-rust.sh  build-macos.sh  build-windows.ps1  check-release-secrets.sh  check-release-secrets.test.ts  check-release-tag.sh  check-release-tag.test.ts  check-tauri-surface.mjs  check-tauri-surface.test.ts  check-version-consistency.mjs  check-version-consistency.test.ts  prepare-eumdac-sidecars.mjs  sign-windows.ps1  smoke-windows-msi.ps1  verify.mjs  verify.sh  visual-smoke.mjs  workflow-smoke.mjs
src/: App.tsx  domain.test.ts  domain.ts  styles.css  tauri.test.ts  tauri.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
