[workspace]
members = [
  "crates/satellite-core",
  "crates/satellite-cli",
  "src-tauri"
]
resolver = "2"

[workspace.package]
version = "2.1.1"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
