[package]
name = "satellite_data_toolkit"
version = "3.0.0"
edition = "2021"
authors = ["Satellite Data Toolkit"]
description = "Professional satellite and meteorological data toolkit for energy trading"

[workspace]

[dependencies]
eframe = "0.28"
egui = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
csv = "1"
dirs = "5"
keyring = "3"
urlencoding = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
