[package]
name = "satellite-data-toolkit"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "satellite_data_toolkit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
satellite-core = { path = "../crates/satellite-core" }
rusqlite = { version = "0.33", features = ["bundled"] }
tauri = { version = "2", features = [] }
thiserror.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
