[package]
name = "satellite-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tiff = "0.10"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
